--- a/Day2/css/style.scss
+++ b/Day2/css/style.scss
@@ -37,125 +37,135 @@ body {
     }
 }
 
-.main_title {
-    display: block;
+.inner_card_content {
+    display: flex;
+    flex-direction: column;
+    margin: 64px;
+    gap: 54px;
 
-    .main_header {
-        text-align: center;
-        font-size: 24px;
-        color: $button_text;
-        font-family: Merriweather;
-        font-weight: 900;
-    }
-
-    .desc {
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-family: Poppins;
-        color: $button_text;
-        font-weight: 500;
-        font-size: 16px;
-    }
-
-    .buttons {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        .ul_radio {
-            list-style: none;
+    .main_title {
+        display: block;
+    
+        .main_header {
+            text-align: center;
+            font-size: 24px;
+            color: $button_text;
+            font-family: Merriweather;
+            font-weight: 900;
+        }
+    
+        .desc {
+            text-align: center;
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 16px;
-            height: 32px;
-
-            li .bttn {
+            font-family: Poppins;
+            color: $button_text;
+            font-weight: 500;
+            font-size: 16px;
+        }
+    
+        .buttons {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+    
+            .ul_radio {
+                list-style: none;
+                padding: 0;
                 display: flex;
                 justify-content: center;
-                align-items: stretch;
-                background-color: $button_background;
-                border-radius: 20px;
-                padding-inline: 8px;
-
-                label {
-                    display: block;
-                    color: $button_text;
-                    font-family: Poppins;
-                    font-size: 16px;
-                    text-align: center;
-                    color: $button_text;
-                    font-weight: 500;
-                    cursor: pointer;
-                    padding-left: 8px;
-                }
-
-                input[type="radio"] {
-                    display: none;
+                align-items: center;
+                gap: 16px;
+                height: 32px;
+    
+                li .bttn {
+                    display: flex;
+                    justify-content: center;
+                    align-items: stretch;
+                    background-color: $button_background;
+                    border-radius: 20px;
+                    padding-inline: 8px;
+    
+                    label {
+                        display: block;
+                        color: $button_text;
+                        font-family: Poppins;
+                        font-size: 16px;
+                        text-align: center;
+                        color: $button_text;
+                        font-weight: 500;
+                        cursor: pointer;
+                        padding-left: 8px;
+                    }
+    
+                    input[type="radio"] {
+                        display: none;
+                    }
                 }
             }
         }
     }
-}
 
-.personnel_cards {
-    .ul_people {
-        list-style: none;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        column-gap: 24px;
-
-        .arrow_div {
-            width: 44px;
-            height: 44px;
+    .personnel_cards {
+        .ul_people {
+            list-style: none;
+            padding: 0;
             display: flex;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
-        }
-
-        .people_form {
-            .ul_form {
-                list-style: none;
+            column-gap: 24px;
+    
+            .arrow_div {
+                width: 44px;
+                height: 44px;
                 display: flex;
-                flex-direction: column;
-                gap: 16px;
-
-                .li_photo {
-                    text-align: center;
-                }
-
-                .li_name {
-                    color: $button_text;
-                    font-family: Merriweather;
-                    font-weight: 900;
-                    font-size: 18px;
-                    text-align: center;
-                }
-
-                .li_job {
-                    color: $button_text;
-                    font-family: Poppins;
-                    font-weight: 400;
-                    font-size: 14px;
-                    text-align: center;
-                }
-
-                .li_view_content {
-                    text-align: center;
-                    border-radius: 29px;
-                    font-size: 14;
-                    font-family: Poppins;
-                    padding-inline: 16px;
-                    padding-block: 8px;
-                    color: $button_view_content_text;
-                    background-color: $button_view_content_bg;
-
-                    .view_content_text {
-                      color: $button_view_content_text;
-                      text-decoration: none;
+                justify-content: center;
+                align-items: center;
+            }
+    
+            .people_form {
+                .ul_form {
+                    list-style: none;
+                    padding: 0;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 16px;
+    
+                    .li_photo {
+                        text-align: center;
+                    }
+    
+                    .li_name {
+                        color: $button_text;
+                        font-family: Merriweather;
+                        font-weight: 900;
+                        font-size: 18px;
+                        text-align: center;
+                    }
+    
+                    .li_job {
+                        color: $button_text;
+                        font-family: Poppins;
+                        font-weight: 400;
+                        font-size: 14px;
+                        text-align: center;
+                    }
+    
+                    .li_view_content {
+                        text-align: center;
+                        border-radius: 29px;
+                        font-size: 14;
+                        font-family: Poppins;
+                        padding-inline: 16px;
+                        padding-block: 8px;
+                        color: $button_view_content_text;
+                        background-color: $button_view_content_bg;
+    
+                        .view_content_text {
+                          color: $button_view_content_text;
+                          text-decoration: none;
+                        }
                     }
                 }
             }
