--- a/Day3/css/style.css
+++ b/Day3/css/style.css
@@ -1,24 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
-body {
-  background-color: #E8E8FD;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  line-height: 1;
+  list-style: none;
 }
 
-.card_wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+body {
+  background-color: #e8e8fd;
 }
 
 .card_wrapper .orange_card {
   width: 276px;
   height: 1009px;
-  background-color: #EE4D38;
+  background-color: #ee4d38;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -32,7 +28,7 @@ body {
 .card_wrapper .orange_card .main_card {
   width: 1319px;
   height: 879px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   position: absolute;
   margin-left: 61px;
   border-radius: 30px;
@@ -49,16 +45,16 @@ body {
 .account_panel {
   height: 879px;
   width: 260px;
-  background-color: #F8F8FF;
+  background-color: #f8f8ff;
   border-radius: 32px;
   display: -ms-grid;
   display: grid;
   -webkit-box-pack: stretch;
       -ms-flex-pack: stretch;
           justify-content: stretch;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .account_panel .account_panel_upper {
@@ -69,9 +65,6 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -79,12 +72,13 @@ body {
 }
 
 .account_panel .account_panel_upper .account_detail {
+  margin-top: 58px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -102,14 +96,14 @@ body {
 }
 
 .account_panel .account_panel_upper .account_detail .account_owner .text {
-  font-family: 'Poppins';
-  color: #62618F;
+  font-family: "Poppins";
+  color: #62618f;
 }
 
 .account_panel .account_panel_upper .account_detail .account_owner .name {
   font-weight: bold;
   font-size: 16px;
-  color: #1A194D;
+  color: #1a194d;
 }
 
 .account_panel .account_panel_upper .account_detail .account_owner .acc_id {
@@ -126,8 +120,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   gap: 8px;
-  margin-top: 48px;
+  margin-top: 40px;
+  width: 174px;
 }
 
 .account_panel .account_panel_upper .ul_panel .ul_items {
@@ -141,21 +139,18 @@ body {
       -ms-flex-align: center;
           align-items: center;
   gap: 10px;
-  height: 48px;
 }
 
 .account_panel .account_panel_upper .ul_panel .ul_items .item_text {
   font-family: "Poppins";
   font-size: 14px;
-  color: #62618F;
+  color: #62618f;
 }
 
 .account_panel .footer {
-  display: -ms-grid;
-  display: grid;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: end;
+  position: absolute;
+  bottom: 70px;
+  margin-left: 16px;
 }
 
 .account_panel .footer .footer_item {
@@ -173,10 +168,30 @@ body {
 .account_panel .footer .footer_item .item_text {
   font-family: "Poppins";
   font-size: 14px;
-  color: #62618F;
+  color: #62618f;
+}
+
+.billing_title {
+  font-size: 32px;
+  font-family: "Poppins";
+  font-weight: 900;
+  color: #1a194d;
+  margin-top: 70px;
+  margin-bottom: 49px;
 }
 
 .main_panel {
+  gap: 16px;
+  margin-left: 56px;
+}
+
+.main_panel .main_panel_content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.main_panel .main_panel_content .main_panel_orders {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -184,21 +199,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
-  margin: 48px;
-  gap: 16px;
+  margin-right: 67px;
 }
 
-.main_panel .main_title .billing_title {
-  font-size: 32px;
-  font-family: "Poppins";
-  font-weight: 900;
-  color: #1A194D;
-}
-
-.main_panel .description {
+.main_panel .main_panel_content .main_panel_orders .description {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -209,24 +213,25 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-bottom: 32px;
+  margin-bottom: 50px;
 }
 
-.main_panel .description .desc_title {
-  color: #1A194D;
+.main_panel .main_panel_content .main_panel_orders .description .desc_title {
+  color: #1a194d;
   font-size: 16px;
   font-family: "Poppins";
   font-weight: 800;
+  margin-bottom: 14px;
 }
 
-.main_panel .description .desc {
-  color: #62618F;
+.main_panel .main_panel_content .main_panel_orders .description .desc {
+  color: #62618f;
   font-size: 14px;
   font-family: "Poppins";
   font-weight: 500;
 }
 
-.main_panel .order_table .table {
+.main_panel .main_panel_content .main_panel_orders .order_table .table {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -237,24 +242,25 @@ body {
   gap: 4px;
 }
 
-.main_panel .order_table .table .headers {
-  color: #62618F;
+.main_panel .main_panel_content .main_panel_orders .order_table .table .headers {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  gap: 114px;
-  padding-inline: 16px;
-  padding-block: 8px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.main_panel .order_table .table .rows {
-  color: #1A194D;
+.main_panel .main_panel_content .main_panel_orders .order_table .table .headers .header_text {
+  font-family: "Poppins";
+  font-size: 14px;
+  color: #62618f;
+  width: 150px;
+  text-align: start;
+}
+
+.main_panel .main_panel_content .main_panel_orders .order_table .table .rows {
+  color: #1a194d;
   display: -ms-grid;
   display: grid;
   grid-auto-flow: column;
@@ -265,42 +271,48 @@ body {
       -ms-flex-pack: start;
           justify-content: flex-start;
   gap: 114px;
-  padding-inline: 16px;
-  padding-block: 8px;
+  padding-block: 16px;
 }
 
-.main_panel .order_table .table .rows .row_text {
-  color: #1A194D;
+.main_panel .main_panel_content .main_panel_orders .order_table .table .rows .row_text {
+  color: #1a194d;
   font-size: 16px;
   font-family: "Poppins";
   font-weight: bold;
+  display: inline-block;
+  width: 150px;
 }
 
-.main_panel .order_table .table .rows .download {
+.main_panel .main_panel_content .main_panel_orders .order_table .table .rows .download {
   text-decoration: none;
   border: solid;
   border-radius: 8px;
-  border-color: #CBCBD9;
+  border-color: #cbcbd9;
   padding-block: 8px;
   cursor: pointer;
 }
 
-.main_panel .order_table .table .rows .download .download_text {
-  color: #1A194D;
+.main_panel .main_panel_content .main_panel_orders .order_table .table .rows .download .download_text {
+  color: #1a194d;
   padding-inline: 16px;
   font-size: 16px;
   font-family: "Poppins";
   font-weight: bold;
 }
 
-.main_panel .loadmore .loadmore_link {
-  color: #EE4D38;
+.main_panel .main_panel_content .main_panel_orders .order_table .loadmore {
+  margin-top: 16px;
+  margin-bottom: 105px;
+}
+
+.main_panel .main_panel_content .main_panel_orders .order_table .loadmore .loadmore_link {
+  color: #ee4d38;
   cursor: pointer;
   font-family: "Poppins";
   font-weight: 600;
 }
 
-.main_panel .payment {
+.main_panel .main_panel_content .main_panel_orders .order_table .payment {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -313,22 +325,22 @@ body {
           justify-content: center;
 }
 
-.main_panel .payment .credit_card .ul_payment {
+.main_panel .main_panel_content .main_panel_orders .order_table .payment .credit_card .ul_payment {
   list-style: none;
   padding: 0;
   margin: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   -ms-flex-line-pack: center;
       align-content: center;
   gap: 16px;
 }
 
-.main_panel .payment .credit_card .ul_payment .ul_items {
+.main_panel .main_panel_content .main_panel_orders .order_table .payment .credit_card .ul_payment .ul_items {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -340,45 +352,43 @@ body {
           align-items: center;
 }
 
-.main_panel .payment .credit_card .ul_payment .ul_items .visa_icon {
+.main_panel .main_panel_content .main_panel_orders .order_table .payment .credit_card .ul_payment .ul_items .visa_icon {
   border: solid;
   border-radius: 8px;
-  border-color: #CBCBD9;
+  border-color: #cbcbd9;
   padding: 10px;
 }
 
-.main_panel .payment .credit_card .ul_payment .ul_items .visa_ending {
+.main_panel .main_panel_content .main_panel_orders .order_table .payment .credit_card .ul_payment .ul_items .visa_ending {
   font-family: "Poppins";
   font-size: 16px;
   font-weight: 600;
-  color: #1A194D;
-  width: 324px;
+  color: #1a194d;
+  width: 420px;
 }
 
-.main_panel .payment .credit_card .ul_payment .ul_items .remove_button {
-  color: #1A194D;
-  background-color: #FFFFFF;
+.main_panel .main_panel_content .main_panel_orders .order_table .payment .credit_card .ul_payment .ul_items .remove_button {
+  color: #1a194d;
+  background-color: #ffffff;
   padding-inline: 16px;
   font-size: 16px;
   font-family: "Poppins";
   font-weight: bold;
   border: solid;
   border-radius: 8px;
-  border-color: #CBCBD9;
+  border-color: #cbcbd9;
   padding-block: 8px;
   cursor: pointer;
 }
 
-.subscription_card {
+.main_panel .main_panel_content .subscription_card {
   width: 258px;
   height: 221px;
-  background-color: #EE4D38;
+  background-color: #ee4d38;
   border-radius: 16px;
 }
 
-.subscription_card .subs_plan .ul_subs {
-  list-style: none;
-  padding: 0;
+.main_panel .main_panel_content .subscription_card .subs_plan {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -389,41 +399,41 @@ body {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   gap: 16px;
   margin: 32px;
 }
 
-.subscription_card .subs_plan .ul_subs .ul_items .text {
-  color: #FFFFFF;
+.main_panel .main_panel_content .subscription_card .subs_plan .text {
+  color: #ffffff;
   font-family: "Poppins";
   font-size: 16px;
 }
 
-.subscription_card .subs_plan .ul_subs .ul_items .plan {
+.main_panel .main_panel_content .subscription_card .subs_plan .text .plan {
   font-weight: bold;
   font-size: 24px;
 }
 
-.subscription_card .subs_plan .ul_subs .ul_items .renew {
+.main_panel .main_panel_content .subscription_card .subs_plan .text .renew {
   font-size: 14px;
 }
 
-.subscription_card .subs_plan .ul_subs .ul_items .cancel_subs {
+.main_panel .main_panel_content .subscription_card .subs_plan .cancel_subs {
   text-decoration: none;
   border: solid;
   border-radius: 8px;
-  border-color: #CBCBD9;
+  border-color: #cbcbd9;
   padding-block: 8px;
   padding-inline: 8px;
   cursor: pointer;
 }
 
-.subscription_card .subs_plan .ul_subs .ul_items .cancel_subs .cancel_subs_text {
+.main_panel .main_panel_content .subscription_card .subs_plan .cancel_subs .cancel_subs_text {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #ffffff;
   font-size: 16px;
   font-family: "Poppins";
   font-weight: 500;
